# crabai

./: Cargo.toml  README.md
src/: bundled_prompts.rs  cli.rs  config.rs  config_editor.rs  error.rs  main.rs  model_cache.rs  prompt_loader.rs  seed_model_cache.json  types.rs
src/prompts/: blog.md  clean.md  dixit.md  ideas.md  markdown.md  pragmatica.md  summarize.md  translate.md  weaver.md
src/providers/: anthropic.rs  deepseek.rs  google.rs  groq.rs  mistral.rs  mod.rs  openai.rs  openai_compat.rs  openrouter.rs  together.rs  trait.rs
