[package]
name = "crabai"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Minimal Unix-native multi-provider LLM CLI"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
dirs = "5"
async-trait = "0.1"
atty = "0.2"
dialoguer = "0.11"
include_dir = "0.7"
